--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
+
 .page {
     background-color: white;
-    border: 1px solid orange;
     margin: 0 auto;
+    max-width: 1440px;
+    font-family: 'Spartan', sans-serif;
+    font-weight: 700;
+    background-image: url("./images/bg-pattern-top-desktop.svg"), url("./images/bg-pattern-bottom-desktop.svg");
+    background-position: left top, right 100px bottom;
+    background-repeat: no-repeat;
+    padding-top: 127px;
 }
 
 .top-rectangle {
-    width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
     display: flex;
-    margin-top: 127px;
 }
 
 .title-square {
-    width: 445px;
-    border: red 1px solid;
+    max-width: 445px;
     margin-right: 125px;
+    align-items: center;
 }
 
 .title {
@@ -31,12 +38,12 @@
     line-height: 25px;
     letter-spacing: -0.5px;
     color: #927b91;
+    font-weight: 500;
 }
 
 .ratings-square {
     width: 540px;
     display: block;
-    border: red 1px solid;
 }
 
 .rating {
@@ -44,7 +51,6 @@
     width: 445px;
     height: 56px;
     margin-bottom: 16px;
-    border: 1px solid blue;
     background-color: #F7F2F7;
     border-radius: 10px;
     display: flex;
@@ -72,4 +78,149 @@
 
 .star {
     margin-right: 8.45px;
+}
+
+.star:last-child {
+    margin-right: 0;
+}
+
+
+.bottom-rectangle {
+    width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    margin-top: 127px;
+    margin-bottom: 100px;
+}
+
+.testimonial-square {
+    width: 350px;
+    height: 234px;
+    margin-right: 30px;
+    background-color: #512051;
+    color: white;
+    border-radius: 10px;
+}
+
+.testimonial-square:last-child {
+    margin-right: 0;
+}
+
+.testimonial-square_center {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.testimonial-square_bottom {
+    margin-top: auto;
+}
+
+
+.personal-info {
+    width: 160px;
+    margin-left: 32px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.personal-info__image {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.personal-info__text {
+    margin: auto;
+}
+
+.personal-info__name {
+    margin: 0;
+    font-size: 13px;
+    line-height: 14.56px;
+    margin-bottom: 5px;
+}
+
+.personal-info__verified {
+    margin: 0;
+    color: #EE69A4;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 14.56px;
+}
+
+.personal-info__comment {
+    margin: 0 auto;
+    max-width: 286px;
+    font-size: 13px;
+    line-height: 22px;
+    letter-spacing: -0.23px;
+    font-weight: 500;
+    margin-top: 26px;
+}
+
+
+@media only screen and (max-width: 375px) {
+
+    .page {
+        background-size: 100%, cover;
+        background-position: left top, center;
+        padding-top: 80px;
+        padding-bottom: 99px;
+    }
+
+    .top-rectangle {
+        max-width: 327px;
+        flex-direction: column;
+    }
+
+    .title-square {
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+
+    .title {
+        text-align: center;
+        margin-bottom: 18px;
+        font-size: 32px;
+        letter-spacing: -1.14px;
+    }
+
+    .subtitle {
+        text-align: center;
+    }
+
+    .ratings-square {
+        max-width: 327px;
+    }
+
+    .rating {
+        width: 100%;
+        margin: 0 auto 16px auto;
+        flex-direction: column;
+    }
+
+    .bottom-rectangle {
+        margin-top: 49px;
+        max-width: 327px;
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .testimonial-square {
+        margin: 0 auto;
+        width: 100%;
+        margin-bottom: 16px;
+    }
+
+    .testimonial-square:last-child {
+        margin-bottom: 0;
+    }
+
+    .personal-info__comment {
+        margin-bottom: 32px;
+    }
+
+
 }
